; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_vlcs_stopped.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_vlcs_stopped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libvlc_event_t = type { i32 }
%struct.vlc_source = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.libvlc_event_t*, i8*)* @vlcs_stopped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlcs_stopped(%struct.libvlc_event_t* %0, i8* %1) #0 {
  %3 = alloca %struct.libvlc_event_t*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vlc_source*, align 8
  store %struct.libvlc_event_t* %0, %struct.libvlc_event_t** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.vlc_source*
  store %struct.vlc_source* %7, %struct.vlc_source** %5, align 8
  %8 = load %struct.vlc_source*, %struct.vlc_source** %5, align 8
  %9 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load %struct.vlc_source*, %struct.vlc_source** %5, align 8
  %14 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @obs_source_output_video(i32 %15, i32* null)
  br label %17

17:                                               ; preds = %12, %2
  %18 = load %struct.libvlc_event_t*, %struct.libvlc_event_t** %3, align 8
  %19 = call i32 @UNUSED_PARAMETER(%struct.libvlc_event_t* %18)
  ret void
}

declare dso_local i32 @obs_source_output_video(i32, i32*) #1

declare dso_local i32 @UNUSED_PARAMETER(%struct.libvlc_event_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
